--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    <link href="/assets/output.css" rel="stylesheet">
 </head>
-<body class="mat-typography">
+<body class="mat-typography bg-gray-300">
   <app-root></app-root>
 </body>
 </html>
