key metrics, capture screenshot code

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    <link href="/assets/output.css" rel="stylesheet">
+  <script type="text/javascript" src="html2canvas-master/dist/html2canvas.js"></script>
 </head>
-<body class="mat-typography bg-gray-300">
+<body class="mat-typography">
   <app-root></app-root>
 </body>
 </html>
